--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "ipatool.ts",
   "version": "0.2.0",
   "description": "Test in Node.js 18.16.1 environment",
-  "main": "dist/index.js",
+  "main": "dist/main.js",
   "type": "module",
   "dependencies": {
     "fetch-cookie": "^3.0.1",
